tests/analyzer/errors/invalid_var_decl.rv
// Invalid assigned type
var a: int = 7.5
var b: float = "foo"
var c: bool = 8
var e: str = 2/4

// Unknown type
var a: floa = 7.5
var b: Int = 4
var c: House

// Already declared
var declared: int
var declared: float

fn main() {}